# chimera

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WORKSPACE  bazel-bin  bazel-chimera-bazel  bazel-genfiles  bazel-out  bazel-testlogs  conanfile-unix.txt  gumbo.BUILD
chimera/: BUILD.bazel  animation.cpp  animation.h  chimera.h  context.cpp  context.h  core.h  document.cpp  document.h  element.cpp  element.h  focus.cpp  focus.h  layout.cpp  layout.h  rendering.cpp  rendering.h  types.h
chimera/adaptor/: adaptor.h
chimera/dom/: body.cpp  body.h  button.cpp  button.h  div.cpp  div.h  img.cpp  img.h  input.cpp  input.h
chimera/render/: font.cpp  font.h
chimera/style/: style.cpp  style.h
chimera/virtual/: vtree.cpp  vtree.h
cmake/: build_examples.cmake  build_library.cmake  install_deps.cmake
cmake/examples/: dx9.cmake  opengl3.cmake
cmake/modules/: FindHarfBuzz.cmake  FindWebM.cmake
cmake/win32/: conanfile.txt
docs/: Gemfile  _config.yml  index.html
docs/_layouts/: default.html
docs/_posts/: 2017-07-31-welcome-to-jekyll.markdown
examples/: BUILD.bazel  browse.cpp  browse.h  login.cpp  login.h  opengl3.cpp  opengl3_bridge.cpp  opengl3_bridge.h
examples/app/: loading.h  login.cpp  login.h  root.h
examples/assets/: particles.mov
examples/cocoa/: cocoa.mm  cocoa_adaptor.cpp  cocoa_adaptor.h  hello_world.mm
examples/dx9/: dx9.cpp  dx9_adaptor.cpp
examples/opengl3/: opengl3.cpp  opengl3.mm  opengl3_adaptor.cpp  opengl3_adaptor.h
include/: BUILD.bazel
include/Chimera/: Chimera.h
include/Cosmonaut/: Cosmonaut.h
src/: BUILD.bazel  animation.cpp  animation.h  context.cpp  context.h  copts.bzl  core.h  document.cpp  document.h  element.cpp  element.h  focus.cpp  focus.h  layout.cpp  layout.h  rendering.cpp  rendering.h  style.cpp  style.h  types.h
src/adaptor/: adaptor.h  dx9.cpp  dx9.h  opengl3.cpp  opengl3.h
src/component/: component.cpp  component.h
src/dom/: body.cpp  body.h  button.cpp  button.h  div.cpp  div.h  img.cpp  img.h  input.cpp  input.h
src/render/: font.cpp  font.h
src/style/: style.cpp  style.h
src/virtual/: vtree.cpp  vtree.h
test/: BUILD.bazel  context.cpp  layout.cpp
