# load("@build_bazel_rules_apple//apple:macos.bzl", "macos_command_line_application")

filegroup(
    name = "assets",
    srcs = glob([
        "assets/bg.png",
        "assets/*.ttf"
    ]),
)

cc_binary(
    name = "opengl3",
    srcs = [
        "opengl3/opengl3.cpp",
        "opengl3/opengl3_adaptor.cpp",
        "opengl3/opengl3_adaptor.h",
        "app/root.h"
    ],
    copts = ["-std=c++14"],
    linkopts = select({
        "//chimera:windows": [],
        "//conditions:default": ["-framework Cocoa"],
    }),
    data = ["//examples:assets"],
    deps = [
        "//include:chimera-include",
        "//src:chimera",
        "//vendor:lodepng",
        "//vendor:glfw"
    ]
)

cc_binary(
    name = "dx9",
    srcs = [
        "dx9/dx9.cpp",
        "dx9/dx9_adaptor.h",
        "dx9/dx9_adaptor.cpp",
        "app/root.h",
    ],
    linkopts = ["-subsystem:windows"],
    data = ["//examples:assets"],
    deps = [
        "//include:chimera-include",
        "//src:chimera",
        "//vendor:lodepng"
    ]
)

# objc_library(
#     name = "chimera-cocoa-lib",
#     srcs = [
#         "cocoa/cocoa.mm",
#         "opengl3/opengl3_adaptor.cpp",
#         "opengl3/opengl3_adaptor.h",
#         "app/root.h"
#     ],
#     copts = ["-std=c++14"],
#     sdk_frameworks = ["OpenGL"],
#     deps = [
#         "//include:chimera-include",
#         "//src:chimera",
#         "//vendor:lodepng",
#         "@com_google_absl//absl/strings",
#         "@gumbo//:gumbo",
#     ]
# )

# macos_command_line_application(
#     name = "chimera-cocoa",
#     linkopts = ["-framework Cocoa"],
#     deps = [":chimera-cocoa-lib"]
# )
