load(
    "//src:copts.bzl",
    "CHIMERA_DEFAULT_COPTS",
)

cc_library(
    name = "chimera",
    srcs = glob([
        "*.cpp",
        "dom/*.cpp",
        "render/*.cpp",
        "style/*.cpp",
        "virtual/*.cpp"
    ]),
    hdrs = glob([
        "*.h",
        "**/*.h"
    ]),
    copts = CHIMERA_DEFAULT_COPTS,
    deps = [
        "//vendor:freetype2"
    ],
    visibility = ["//visibility:public"],
)