load(
    "//src:copts.bzl",
    "CHIMERA_DEFAULT_COPTS",
    "CHIMERA_DEFAULT_DEFINES"
)

cc_library(
    name = "chimera",
    srcs = glob([
        "*.cpp",
        "dom/*.cpp",
        "render/*.cpp",
        "style/*.cpp",
        "virtual/*.cpp"
    ]),
    hdrs = glob([
        "*.h",
        "**/*.h"
    ]),
    copts = CHIMERA_DEFAULT_COPTS,
    defines = CHIMERA_DEFAULT_DEFINES,
    deps = [
        "//vendor:freetype2"
    ],
    visibility = ["//visibility:public"],
)